src/objects/Zip_Demographic__c.object
<CustomObject>
    <fields>
        <fullName>Trade_zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field determines if a zip code falls into a center&apos;s trade zone area (custom polygon determined by drive time distances to a zip code). This is similar to being In-market</description>
        <label>Trade Zone Center</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Zip Demographics (Trade Zone Center)</relationshipLabel>
        <relationshipName>Zip_Demographics7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueZipName__c</fullName>
        <label>UniqueZipName</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WaterArea__c</fullName>
        <label>WaterArea</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WitePopulation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>WitePopulation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ZipIntroDate__c</fullName>
        <label>ZipIntroDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>block_from_OS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used by the online schedule tool to block people from scheduling online who are outside of the targeting zone. This is part of a test to help optimize the online schedule for our dense markets (New York).</description>
        <label>Block from OS</label>
        <type>Checkbox</type>
    </fields>
    <label>Zip Demographic</label>
    <nameField>
        <label>Demographics Zip Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Demographics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>